--- a/20.05.2023.md
+++ b/20.05.2023.md
@@ -1,42 +1,40 @@
-[5.Maximum Edge of a Triangle](https://edabit.com/challenge/nhXofMMyrowMyr9Nv)
+[9.Return the First Element in an Array](https://edabit.com/challenge/QaApgtePE6QrCZ64o)
 
 ***Answers***
 
 ```js
-function nextEdge(side1, side2) {
-	return (side1 + side2) -1
- }
-    
-```
-
-[6.Find the Perimeter of a Rectangle](https://edabit.com/challenge/XnJ24rWW7iJkNrtsh)
-
-***Answers***
-
-```js
-function findPerimeter(length, width) {
-	return (length + width) *2
-}
-```
-
-[7.Convert Minutes into Seconds](https://edabit.com/challenge/8q54MKnRrm89pSLmW)
-
-***Answers***
-
-```js
-function convert(minutes) {
-	return 60*minutes
+function getFirstValue(arr) {
+	return arr[0]
 }
 ```
 
 
-[8.Area of a Triangle](https://edabit.com/challenge/3CaszbdZYGN4otQD8)
+[10.Convert Hours into Seconds](https://edabit.com/challenge/6AnQqiEjkJdZrWhPS)
 
 ***Answers***
 
 ```js
-function triArea(base, height) {
-	return (base * height) /2
+function howManySeconds(hours) {
+	return hours*3600
 }
+```
 
+[11.Return the Remainder from Two Numbers](https://edabit.com/challenge/Q2j5FTFtsk7PdzrQk)
+
+***Answers***
+
+```js
+function remainder(x, y) {
+	return x%y
+}
+```
+
+[12.Return Something to Me!](https://edabit.com/challenge/MvZK536X7fyrWH8Qc)
+
+***Answers***
+
+```js
+function giveMeSomething(a) {
+	return "something " + a
+}
 ```
